--- a/public/json/text/ansible.html
+++ b/public/json/text/ansible.html
@@ -1,5 +1,6 @@
 <h2>Ansible Quiz: Exploring Automation and Configuration Management</h2>
 <p>Embark on a journey into the world of Ansible with our enlightening Ansible Quiz. Immerse yourself in the realm of automation and configuration management, where orchestrating IT tasks becomes effortless.</p>
+<!--long description-->
 <p>In this immersive quiz, you'll delve into the core concepts of Ansible. Discover the power of automation through Ansible's agentless architecture, where remote systems can be managed without installing any software on them.</p>
 <p>Explore the art of playbooks and roles, enabling you to define configurations and tasks in a declarative manner. Learn how Ansible simplifies the provisioning, configuration, and deployment of your infrastructure.</p>
 <p>Uncover the magic of Ansible's idempotent nature, ensuring that applying configurations is repeatable and consistent. Delve into Ansible's integration with various cloud platforms, enhancing its ability to manage diverse environments.</p>
