--- a/public/json/text/lambda.html
+++ b/public/json/text/lambda.html
@@ -1,5 +1,6 @@
 <h2>AWS Lambda Quiz: Unleash the Power of Serverless Computing</h2>
 <p>Step into the world of AWS Lambda with our captivating quiz. Immerse yourself in the realm of serverless computing, where you can execute code without the hassle of provisioning or managing servers.</p>
+<!--long description-->
 <p>In this enlightening quiz, you'll explore the core concepts of AWS Lambda. Discover how Lambda allows you to run code in response to events, enabling you to build highly scalable and event-driven architectures.</p>
 <p>Explore Lambda's integration with various AWS services, creating a seamless ecosystem for your applications. Learn about the benefits of serverless, from reduced operational overhead to automatic scaling based on demand.</p>
 <p>Uncover the magic of Lambda functions, where you can choose from multiple runtime environments and build applications using your preferred language. Dive into event sources and triggers, harnessing the power of Lambda in real-world scenarios.</p>
