--- a/public/json/text/puppet.html
+++ b/public/json/text/puppet.html
@@ -1,5 +1,6 @@
 <h2>Puppet DevOps Quiz: Exploring Infrastructure Automation</h2>
 <p>Embark on a journey into the world of Puppet with our insightful Puppet DevOps Quiz. Immerse yourself in the realm of infrastructure automation, where the power to manage and configure servers efficiently is at your fingertips.</p>
+<!---long description -->
 <p>In this enriching quiz, you'll delve into the core concepts of Puppet. Uncover the magic of declarative programming, where you define the desired state of your infrastructure, and Puppet works its magic to ensure compliance. Learn how Puppet enables you to manage configurations consistently across diverse environments.</p>
 <p>Discover the art of crafting Puppet manifests and modules, shaping your infrastructure with precision. Dive into the realm of agent-based orchestration, as Puppet agents ensure that your infrastructure adheres to the defined configurations.</p>
 <p>As you progress through the quiz, you'll grasp the significance of Puppet's role in maintaining scalability, security, and consistency in modern DevOps practices. Understand how Puppet aligns with the principles of Infrastructure as Code (IaC) and enables teams to work smarter and more efficiently.</p>
