--- a/public/json/text/ci_cd.html
+++ b/public/json/text/ci_cd.html
@@ -1,5 +1,6 @@
 <h2>CI/CD Quiz: Navigating the Continuous Integration and Continuous Deployment Waters</h2>
 <p>Dive into the world of CI/CD with our enlightening CI/CD Quiz. Embark on a journey through the realms of continuous integration and continuous deployment, where software development practices are transformed into seamless, automated workflows.</p>
+<!--long description-->
 <p>In this immersive quiz, you'll uncover the essence of CI/CD. Explore the power of automating the build, test, and deployment processes, ensuring rapid and reliable software delivery. Learn how CI/CD pipelines streamline collaboration between developers, testers, and operations teams.</p>
 <p>Discover the strategies for maintaining a robust test suite, guaranteeing that your code is thoroughly validated before reaching production. Dive into the intricacies of zero-downtime deployments and the art of rolling updates, as CI/CD empowers you to deliver changes without disrupting services.</p>
 <p>As you progress through the quiz, you'll grasp the significance of continuous feedback loops and the invaluable insights they provide for continuous improvement. Understand how CI/CD aligns with the principles of DevOps, fostering a culture of collaboration and agility.</p>
