--- a/public/json/text/devops.html
+++ b/public/json/text/devops.html
@@ -1,15 +1,10 @@
-<h2>Main DevOps Skills:</h2>
-<ul>
-<li>Version Control</li>
-<li>CI/CD (Continuous Integration/Continuous Deployment)</li>
-<li>Infrastructure as Code (IaC)</li>
-<li>Configuration Management</li>
-<li>Containerization and Orchestration</li>
-<li>Monitoring and Logging</li>
-<li>Cloud Platforms</li>
-<li>Scripting and Automation</li>
-<li>Security Best Practices</li>
-<li>Collaboration and Communication</li>
-<li>Continuous Learning and Adaptability</li>
-<li>Problem-Solving Skills</li>
-</ul>
+<p>
+This DevOps Skills Quiz is designed to assess the proficiency of IT professionals in the field of DevOps, a crucial methodology that bridges the gap between software development and IT operations. The quiz comprises a series of thoughtfully crafted questions covering key DevOps principles, tools, and best practices. Participants will be tested on their understanding of continuous integration, continuous delivery, version control, automation, and collaboration, among other essential DevOps concepts. This quiz aims to provide a comprehensive evaluation of an individual's ability to streamline and enhance the software development lifecycle, fostering a culture of collaboration and efficiency within IT teams.
+</p>
+<!--Long description-->
+<p>
+Welcome to the DevOps Skills Quiz, an insightful examination tailored for IT professionals seeking to gauge their expertise in the dynamic realm of DevOps. DevOps, an amalgamation of development and operations, is a paradigm shift in software engineering that promotes collaboration, automation, and continuous improvement. This quiz encompasses a diverse range of topics, including but not limited to continuous integration and continuous delivery (CI/CD), version control systems (VCS), containerization, orchestration tools, infrastructure as code (IaC), and collaboration methodologies. Participants will encounter questions designed to assess their knowledge of popular DevOps tools such as Jenkins, Docker, Kubernetes, Git, and Ansible.
+</p>
+<p>
+Furthermore, the quiz delves into the cultural aspects of DevOps, evaluating an individual's understanding of fostering a collaborative environment, breaking down silos between development and operations teams, and advocating for a culture of continuous learning and improvement. As the IT landscape continues to evolve, proficiency in DevOps has become indispensable for organizations aiming to accelerate software delivery, enhance quality, and achieve operational excellence. This quiz serves as a valuable resource for both professionals looking to benchmark their DevOps skills and organizations seeking to assess the competency of their IT teams in adopting and implementing DevOps practices. Whether you are a seasoned DevOps practitioner or just embarking on your
+</p>
